@@ -2,11 +2,10 @@ package org.sopt.app.application.poke;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import lombok.Builder;
-import lombok.Getter;
-import lombok.ToString;
-import org.sopt.app.domain.entity.PokeHistory;
+import lombok.*;
+import org.sopt.app.domain.entity.poke.PokeHistory;
 
+@NoArgsConstructor(access = lombok.AccessLevel.PRIVATE)
 public class PokeInfo {
 
     public static final String NEW_FRIEND_NO_MUTUAL = "새로운 친구";
@@ -60,7 +59,7 @@ public class PokeInfo {
         private final Long playgroundId;
         private final String name;
         private final String profileImage;
-        private final Integer generation;
+        private final Long generation;
         private final String part;
         private final Relationship relation;
         private final List<String> mutualFriendNames;
@@ -70,10 +69,11 @@ public class PokeInfo {
 
             if (size == 0) {
                 return NEW_FRIEND_NO_MUTUAL;
-            } else if (size == 1) {
-                return String.format(NEW_FRIEND_ONE_MUTUAL, mutualFriendNames.get(0));
+            }
+            if (size == 1) {
+                return String.format(NEW_FRIEND_ONE_MUTUAL, mutualFriendNames.getFirst());
             } else {
-                return String.format(NEW_FRIEND_MANY_MUTUAL, mutualFriendNames.get(0), size - 1);
+                return String.format(NEW_FRIEND_MANY_MUTUAL, mutualFriendNames.getFirst(), size - 1);
             }
         }
 
@@ -93,15 +93,4 @@ public class PokeInfo {
         private final String message;
 
     }
-
-    @Getter
-    @Builder
-    @ToString
-    public static class PokeMessageDetail {
-
-        private final Long id;
-        private final String content;
-
-    }
-
 }
