@@ -4,43 +4,20 @@ import static org.sopt.app.application.poke.PokeInfo.NEW_FRIEND_MANY_MUTUAL;
 import static org.sopt.app.application.poke.PokeInfo.NEW_FRIEND_NO_MUTUAL;
 import static org.sopt.app.application.poke.PokeInfo.NEW_FRIEND_ONE_MUTUAL;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Random;
-import java.util.function.BiFunction;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.*;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
-import org.sopt.app.application.auth.dto.PlaygroundProfileInfo.ActivityCardinalInfo;
-import org.sopt.app.application.auth.dto.PlaygroundProfileInfo.OwnPlaygroundProfile;
-import org.sopt.app.application.auth.dto.PlaygroundProfileInfo.PlaygroundProfile;
-import org.sopt.app.application.auth.PlaygroundAuthService;
-import org.sopt.app.application.poke.FriendService;
-import org.sopt.app.application.poke.PokeHistoryService;
-import org.sopt.app.application.poke.PokeInfo;
+import org.sopt.app.application.friend.FriendRecommender;
+import org.sopt.app.application.playground.PlaygroundAuthService;
+import org.sopt.app.application.friend.FriendService;
+import org.sopt.app.application.poke.*;
 import org.sopt.app.application.poke.PokeInfo.PokeHistoryInfo;
-import org.sopt.app.application.poke.PokeMessageService;
-import org.sopt.app.application.poke.PokeService;
-import org.sopt.app.application.user.UserInfo.UserProfile;
 import org.sopt.app.application.user.UserService;
-import org.sopt.app.common.exception.BadRequestException;
-import org.sopt.app.common.response.ErrorCode;
-import org.sopt.app.domain.entity.PokeHistory;
+import org.sopt.app.domain.entity.poke.PokeHistory;
 import org.sopt.app.domain.entity.User;
 import org.sopt.app.domain.enums.FriendRecommendType;
 import org.sopt.app.domain.enums.Friendship;
-import org.sopt.app.presentation.poke.PokeResponse;
-import org.sopt.app.presentation.poke.PokeResponse.EachRelationFriendList;
-import org.sopt.app.presentation.poke.PokeResponse.PokeToMeHistoryList;
-import org.sopt.app.presentation.poke.PokeResponse.RecommendedFriendsByAllType;
-import org.sopt.app.presentation.poke.PokeResponse.RecommendedFriendsByType;
-import org.sopt.app.presentation.poke.PokeResponse.SimplePokeProfile;
+import org.sopt.app.presentation.poke.PokeResponse.*;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -53,150 +30,24 @@ public class PokeFacade {
     private final PlaygroundAuthService playgroundAuthService;
     private final UserService userService;
     private final FriendService friendService;
+    private final FriendRecommender friendRecommender;
     private final PokeService pokeService;
     private final PokeHistoryService pokeHistoryService;
     private final PokeMessageService pokeMessageService;
 
     @Transactional(readOnly = true)
-    public List<PokeResponse.PokeMessage> getPokingMessages(String type) {
+    public List<PokeMessage> getPokingMessages(String type) {
         val messages = pokeMessageService.pickRandomMessageByTypeOf(type);
         val fixedMessage = pokeMessageService.getFixedMessage();
         messages.add(fixedMessage);
 
         return messages.stream().map(messagesDetail ->
-                PokeResponse.PokeMessage.of(messagesDetail.getId(), messagesDetail.getContent())
+                new PokeMessage(messagesDetail.getId(), messagesDetail.getContent())
         ).toList();
     }
 
     public String getPokingMessageHeader(String type) {
         return pokeMessageService.getMessagesHeaderComment(type);
-    }
-
-    @Transactional(readOnly = true)
-    public List<SimplePokeProfile> getRecommendUserForNew(String playgroundToken, Long userPlaygroundId,
-            Long userId
-    ) {
-        val playgroundUserIds = playgroundAuthService.getPlayGroundUserIds(playgroundToken);
-        val notFriendUserPlaygroundIds = userService.getUserProfilesByPlaygroundIds(playgroundUserIds.userIds())
-                .stream()
-                .filter(userProfile -> !userId.equals(userProfile.getUserId()) && !friendService.isFriendEachOther(
-                        userId, userProfile.getUserId()))
-                .map(UserProfile::getPlaygroundId)
-                .collect(Collectors.toList());
-        final int RECOMMEND_USER_NUM_FOR_NEW = 6;
-        val recommendUserIds = pickRandomUserIds(notFriendUserPlaygroundIds, userPlaygroundId,
-                RECOMMEND_USER_NUM_FOR_NEW
-        );
-        val playgroundProfiles = playgroundAuthService.getPlaygroundMemberProfiles(playgroundToken, recommendUserIds);
-        val userProfiles = userService.getUserProfilesByPlaygroundIds(recommendUserIds);
-        val pokeHistories = pokeHistoryService.getAllPokeHistoryMap(userId);
-        return makeRandomSimplePokeProfile(userProfiles, playgroundProfiles, pokeHistories, userId);
-    }
-
-    private List<SimplePokeProfile> makeRandomSimplePokeProfile(
-            List<UserProfile> userProfiles,
-            List<PlaygroundProfile> playgroundProfiles,
-            Map<Long, Boolean> pokeHistories,
-            Long userId
-    ) {
-        return userProfiles.stream().map(
-                userProfile -> {
-                    val isAlreadyPoke = Objects.nonNull(pokeHistories.get(userProfile.getUserId()));
-                    val pokeCount = friendService.getRelationInfo(userId, userProfile.getUserId()).getPokeNum();
-                    val playgroundProfile = playgroundProfiles.stream()
-                            .filter(profile -> profile.getMemberId().equals(userProfile.getPlaygroundId()))
-                            .findFirst()
-                            .orElseThrow(() -> new RuntimeException("플레이그라운드 프로필이 없습니다."));
-                    val generation = playgroundProfile.getActivities().get(0).getGeneration();
-                    val part = playgroundProfile.getActivities().get(0).getPart();
-
-                    return SimplePokeProfile.of(
-                            userProfile.getUserId(),
-                            playgroundProfile.getMemberId(),
-                            playgroundProfile.getProfileImage(),
-                            playgroundProfile.getName(),
-                            "",
-                            Integer.parseInt(generation),
-                            part,
-                            pokeCount,
-                            Friendship.NON_FRIEND.getFriendshipName(),
-                            NEW_FRIEND_NO_MUTUAL,
-                            true,
-                            isAlreadyPoke,
-                            false,
-                            ""
-                    );
-                }
-        ).toList();
-    }
-
-    private List<Long> pickRandomUserIds(
-            List<Long> playgroundUserIds, Long userPlaygroundId, int limitNum
-    ) {
-        List<Long> copiedList = new ArrayList<>(playgroundUserIds);
-        copiedList.remove(userPlaygroundId);
-        Collections.shuffle(copiedList, new Random());
-        return copiedList.stream().limit(limitNum).toList();
-    }
-
-    @Transactional(readOnly = true)
-    public List<PokeResponse.Friend> getRecommendFriendsOfUsersFriend(User user) {
-        val randomFriendsUserIds = friendService.findAllFriendIdsByUserIdRandomly(user.getId(), 2);
-        val excludedUserIds = this.getExcludedUserIds(user.getId());
-
-        return randomFriendsUserIds.stream().map(
-                friendsUserId -> {
-                    val friendUser = userService.getUserProfileOrElseThrow(friendsUserId);
-                    val friendProfile = playgroundAuthService.getPlaygroundMemberProfiles(
-                            user.getPlaygroundToken(), List.of(friendUser.getPlaygroundId())
-                    ).get(0);
-
-                    val randomFriendsIds = friendService.findAllFriendIdsByUserIdRandomlyExcludeUserId(friendsUserId,
-                            excludedUserIds, 2);
-
-                    if (randomFriendsIds.isEmpty()) {
-                        return PokeResponse.Friend.of(
-                                friendsUserId,
-                                friendProfile.getMemberId(),
-                                friendProfile.getName(),
-                                friendProfile.getProfileImage(),
-                                List.of()
-                        );
-                    }
-
-                    val randomFriendsOfFriends = userService.getUserProfilesByUserIds(randomFriendsIds);
-
-                    val pokeHistories = pokeHistoryService.getAllPokeHistoryMap(user.getId());
-                    val playgroundProfiles = playgroundAuthService.getPlaygroundMemberProfiles(
-                            user.getPlaygroundToken(),
-                            randomFriendsOfFriends.stream().map(UserProfile::getPlaygroundId).toList());
-                    val simpleProfiles = makeRandomSimplePokeProfile(
-                            randomFriendsOfFriends,
-                            playgroundProfiles,
-                            pokeHistories,
-                            user.getId()
-                    );
-
-                    return PokeResponse.Friend.of(
-                            friendsUserId,
-                            friendProfile.getMemberId(),
-                            friendProfile.getName(),
-                            friendProfile.getProfileImage(),
-                            simpleProfiles
-                    );
-                }
-        ).toList();
-    }
-
-    private List<Long> getExcludedUserIds(Long userId) {
-        List<Long> hasPokeMeBeforeUserIds = pokeHistoryService.getPokeFriendIds(userId);
-        List<Long> friendUserIds = friendService.findAllFriendIdsByUserId(userId);
-
-        List<Long> excludedUserIds = new ArrayList<>(hasPokeMeBeforeUserIds);
-        excludedUserIds.addAll(friendUserIds);
-        excludedUserIds.add(userId);
-
-        return excludedUserIds;
     }
 
     @Transactional(readOnly = true)
@@ -233,12 +84,12 @@ public class PokeFacade {
                 .map(pokeHistory -> getPokeHistoryProfile(user, pokeHistory.getPokerId(), pokeHistory.getId()))
                 .distinct()
                 .toList();
-        return PokeToMeHistoryList.of(
-                pokeToMeHistories,
-                totalPageSize,
-                pageable.getPageSize(),
-                pokedHistories.getNumber()
-        );
+        return PokeToMeHistoryList.builder()
+                .history(pokeToMeHistories)
+                .totalPageSize(totalPageSize)
+                .pageNum(pokedHistories.getNumber())
+                .pageSize(pageable.getPageSize())
+                .build();
     }
 
 
@@ -263,7 +114,6 @@ public class PokeFacade {
         }
     }
 
-
     @Transactional(readOnly = true)
     public List<SimplePokeProfile> getFriend(User user) {
         Long userId = user.getId();
@@ -281,8 +131,8 @@ public class PokeFacade {
                         friendProfile.getProfileImage(),
                         friendProfile.getName(),
                         "",
-                        Integer.parseInt(friendProfile.getActivities().get(0).getGeneration()),
-                        friendProfile.getActivities().get(0).getPart(),
+                        friendProfile.getActivities().getFirst().getGeneration(),
+                        friendProfile.getActivities().getFirst().getPlaygroundPart().getPartName(),
                         friendRelationInfo.getPokeNum(),
                         friendRelationInfo.getRelationName(),
                         createMutualFriendNames(user.getId(), friendId),
@@ -314,9 +164,9 @@ public class PokeFacade {
             return NEW_FRIEND_NO_MUTUAL;
         }
         if (mutualFriendNames.size() == 1) {
-            return String.format(NEW_FRIEND_ONE_MUTUAL, mutualFriendNames.get(0));
+            return String.format(NEW_FRIEND_ONE_MUTUAL, mutualFriendNames.getFirst());
         } else {
-            return String.format(NEW_FRIEND_MANY_MUTUAL, mutualFriendNames.get(0), mutualFriendNames.size() - 1);
+            return String.format(NEW_FRIEND_MANY_MUTUAL, mutualFriendNames.getFirst(), mutualFriendNames.size() - 1);
         }
     }
 
@@ -360,17 +210,17 @@ public class PokeFacade {
         val totalSize = friendService.findAllFriendSizeByFriendship(
                 user.getId(), friendship.getLowerLimit(), friendship.getUpperLimit());
         val totalPageSize = totalSize / pageable.getPageSize();
-        return EachRelationFriendList.of(
-                allOfPokeWithFriends,
-                totalSize,
-                totalPageSize,
-                pageable.getPageSize(),
-                friends.getNumber()
-        );
+        return EachRelationFriendList.builder()
+                .friendList(allOfPokeWithFriends)
+                .totalSize(totalSize)
+                .totalPageSize(totalPageSize)
+                .pageSize(pageable.getPageSize())
+                .pageNum(friends.getNumber())
+                .build();
     }
 
     public SimplePokeProfile getPokeHistoryProfile(User user, Long friendId, Long pokeId) {
-        PokeInfo.PokeDetail pokeDetail = getPokeInfo(pokeId);
+        PokeInfo.PokeDetail pokeDetail = pokeService.getPokeDetail(pokeId);
         PokeInfo.PokedUserInfo friendUserInfo = getFriendUserInfo(user, friendId);
 
         return SimplePokeProfile.from(
@@ -379,191 +229,6 @@ public class PokeFacade {
                 getIsAlreadyPoke(pokeDetail.getPokerId(), pokeDetail.getPokedId(), user.getId()),
                 getIsAnonymous(pokeDetail.getPokerId(), pokeDetail.getPokedId(), user.getId())
         );
-    }
-
-    public RecommendedFriendsByAllType getRecommendedFriendsByTypeList(List<FriendRecommendType> typeList, int size,
-            User user) {
-        List<RecommendedFriendsByType> recommendedFriendsByTypeList = new ArrayList<>();
-
-        OwnPlaygroundProfile ownPlaygroundProfile = playgroundAuthService.getOwnPlaygroundProfile(
-                user.getPlaygroundToken());
-        Integer latestGeneration = getLatestGenerationByActivityCardinalInfoList(ownPlaygroundProfile.getActivities());
-        String mbti = ownPlaygroundProfile.getMbti();
-        String university = ownPlaygroundProfile.getUniversity();
-
-        for (FriendRecommendType type : typeList) {
-            List<SimplePokeProfile> recommendedFriendProfiles;
-            switch (type) {
-                case ALL:
-                    handleAllType(recommendedFriendsByTypeList, ownPlaygroundProfile, size, user);
-                    return RecommendedFriendsByAllType.of(recommendedFriendsByTypeList);
-                case GENERATION:
-                    recommendedFriendProfiles = findRecommendedFriendsListByGeneration(user, size,
-                            this.getAllGenerationByActivityCardinalInfoList(ownPlaygroundProfile.getActivities()),
-                            playgroundAuthService::getPlaygroundIdsForSameGeneration);
-
-                    if (!recommendedFriendProfiles.isEmpty()) {
-                        recommendedFriendsByTypeList.add(getRecommendedFriendsByType(type, recommendedFriendProfiles));
-                    }
-                    break;
-                case MBTI:
-                    if (mbti != null) {
-                        recommendedFriendProfiles = findRecommendedFriendsList(user, size, latestGeneration, mbti,
-                                playgroundAuthService::getPlaygroundIdsForSameMbti);
-
-                        if (!recommendedFriendProfiles.isEmpty()) {
-                            recommendedFriendsByTypeList.add(
-                                    getRecommendedFriendsByType(type, recommendedFriendProfiles));
-                        }
-                    }
-                    break;
-                case UNIVERSITY:
-                    if (university != null) {
-                        recommendedFriendProfiles = findRecommendedFriendsList(user, size, latestGeneration, university,
-                                playgroundAuthService::getPlaygroundIdsForSameUniversity);
-
-                        if (!recommendedFriendProfiles.isEmpty()) {
-                            recommendedFriendsByTypeList.add(
-                                    getRecommendedFriendsByType(type, recommendedFriendProfiles));
-                        }
-                    }
-                    break;
-                default:
-                    throw new BadRequestException(ErrorCode.INVALID_FRIEND_RECOMMEND_TYPE.getMessage());
-            }
-        }
-        return RecommendedFriendsByAllType.of(recommendedFriendsByTypeList);
-    }
-
-
-    private void handleAllType(List<RecommendedFriendsByType> recommendedFriendsByTypeList,
-            OwnPlaygroundProfile ownPlaygroundProfile, int size, User user) {
-        Integer latestGeneration = getLatestGenerationByActivityCardinalInfoList(ownPlaygroundProfile.getActivities());
-        String mbti = ownPlaygroundProfile.getMbti();
-        String university = ownPlaygroundProfile.getUniversity();
-        List<SimplePokeProfile> recommendedFriendProfiles;
-
-        recommendedFriendProfiles = findRecommendedFriendsListByGeneration(user, size,
-                this.getAllGenerationByActivityCardinalInfoList(ownPlaygroundProfile.getActivities()),
-                playgroundAuthService::getPlaygroundIdsForSameGeneration);
-
-        if (!recommendedFriendProfiles.isEmpty()) {
-            recommendedFriendsByTypeList.add(
-                    getRecommendedFriendsByType(FriendRecommendType.GENERATION, recommendedFriendProfiles));
-        }
-
-        if (mbti != null) {
-            recommendedFriendProfiles = findRecommendedFriendsList(user, size, latestGeneration, mbti,
-                    playgroundAuthService::getPlaygroundIdsForSameMbti);
-
-            if (!recommendedFriendProfiles.isEmpty()) {
-                recommendedFriendsByTypeList.add(
-                        getRecommendedFriendsByType(FriendRecommendType.MBTI, recommendedFriendProfiles));
-            }
-        }
-
-        if (university != null) {
-            recommendedFriendProfiles = findRecommendedFriendsList(user, size, latestGeneration, university,
-                    playgroundAuthService::getPlaygroundIdsForSameUniversity);
-
-            if (!recommendedFriendProfiles.isEmpty()) {
-                recommendedFriendsByTypeList.add(
-                        getRecommendedFriendsByType(FriendRecommendType.UNIVERSITY, recommendedFriendProfiles));
-            }
-        }
-    }
-
-    private List<SimplePokeProfile> findRecommendedFriendsListByGeneration(User user, int size,
-            List<Integer> generationList,
-            Function<List<Integer>, List<Long>> fetchProfilesFunction) {
-        List<Long> recommendedPlaygroundIds = fetchProfilesFunction.apply(generationList);
-        return getRecommendedFriendsBySize(user, size, recommendedPlaygroundIds);
-    }
-
-    private List<SimplePokeProfile> getRecommendedFriendsBySize(User user, int size,
-            List<Long> recommendedPlaygroundIds) {
-        List<UserProfile> recommendedUserProfiles = userService.getUserProfilesByPlaygroundIds(
-                recommendedPlaygroundIds);
-        List<UserProfile> validatedUserProfiles = excludeProfileLinkedFriends(recommendedUserProfiles, user.getId());
-
-        if (validatedUserProfiles.isEmpty()) {
-            return Collections.emptyList();
-        }
-        return createNonFriendPokeProfile(
-                selectRandomProfilesOfSize(validatedUserProfiles, size), user.getPlaygroundToken());
-    }
-
-    private <T> List<SimplePokeProfile> findRecommendedFriendsList(User user, int size, Integer latestGeneration,
-            T value, BiFunction<Integer, T, List<Long>> fetchProfilesFunction) {
-        List<Long> recommendedPlaygroundIds = fetchProfilesFunction.apply(latestGeneration, value);
-        return getRecommendedFriendsBySize(user, size, recommendedPlaygroundIds);
-    }
-
-    private List<UserProfile> excludeProfileLinkedFriends(List<UserProfile> profiles, Long userId) {
-        List<Long> userIdsToBeExcluded = this.getUserIdsToBeExcluded(userId);
-        userIdsToBeExcluded.add(userId);
-
-        return profiles.stream()
-                .filter(profile -> !userIdsToBeExcluded.contains(profile.getUserId()))
-                .collect(Collectors.toList());
-    }
-
-    private List<Long> getUserIdsToBeExcluded(Long userId) {
-        List<Long> userIdsLinkedFriends = friendService.findUserIdsLinkedFriends(userId);
-        userIdsLinkedFriends.add(userId);
-        return userIdsLinkedFriends;
-    }
-
-    private List<UserProfile> selectRandomProfilesOfSize(List<UserProfile> profiles, int size) {
-        Collections.shuffle(profiles, new Random());
-        return profiles.stream().limit(size).toList();
-    }
-
-    private RecommendedFriendsByType getRecommendedFriendsByType(FriendRecommendType type,
-            List<SimplePokeProfile> recommendedFriends) {
-
-        return RecommendedFriendsByType.of(
-                type,
-                type.getRecommendTitle(),
-                recommendedFriends
-        );
-    }
-
-    private List<SimplePokeProfile> createNonFriendPokeProfile(List<UserProfile> userProfiles, String playgroundToken) {
-        List<PlaygroundProfile> a = playgroundAuthService.getPlaygroundMemberProfiles(
-                playgroundToken, userProfiles.stream().map(UserProfile::getPlaygroundId).toList());
-
-        return a.stream().map(profile ->
-                SimplePokeProfile.createNonFriendPokeProfile(
-                        userProfiles.stream().filter(
-                                        userProfile -> userProfile.getPlaygroundId().equals(profile.getMemberId()))
-                                .findFirst()
-                                .orElseThrow(() -> new BadRequestException(ErrorCode.USER_NOT_FOUND.getMessage()))
-                                .getUserId(),
-                        profile.getMemberId(),
-                        profile.getProfileImage(),
-                        profile.getName(),
-                        Integer.parseInt(profile.getLatestActivity().getGeneration()),
-                        profile.getLatestActivity().getPart()
-                )).toList();
-    }
-
-    private Integer getLatestGenerationByActivityCardinalInfoList(List<ActivityCardinalInfo> activityCardinalInfoList) {
-        return Integer.parseInt(
-                activityCardinalInfoList.stream()
-                        .filter(ActivityCardinalInfo::isActualGeneration)
-                        .max(Comparator.comparing(ActivityCardinalInfo::getGeneration))
-                        .orElseThrow(
-                                () -> new BadRequestException(ErrorCode.USER_GENERATION_INFO_NOT_FOUND.getMessage()))
-                        .getGeneration());
-    }
-
-    private List<Integer> getAllGenerationByActivityCardinalInfoList(
-            List<ActivityCardinalInfo> activityCardinalInfoList) {
-        return activityCardinalInfoList.stream()
-                .filter(ActivityCardinalInfo::isActualGeneration)
-                .map(activityCardinalInfo -> Integer.parseInt(activityCardinalInfo.getGeneration()))
-                .toList();
     }
 
     private PokeInfo.PokedUserInfo getFriendUserInfo(User user, Long friendUserId) {
@@ -579,15 +244,16 @@ public class PokeFacade {
                 .playgroundId(pokedUserPlaygroundProfile.getMemberId())
                 .name(pokedUserPlaygroundProfile.getName())
                 .profileImage(pokedUserPlaygroundProfile.getProfileImage())
-                .generation(Integer.parseInt(latestActivity.getGeneration()))
-                .part(latestActivity.getPart())
+                .generation(latestActivity.getGeneration())
+                .part(latestActivity.getPlaygroundPart().getPartName())
                 .relation(relationInfo)
                 .mutualFriendNames(mutualFriendNames)
                 .build();
     }
 
-    private PokeInfo.PokeDetail getPokeInfo(Long pokeHistoryId) {
-        return pokeService.getPokeDetail(pokeHistoryId);
+    public RecommendedFriendsRequest getRecommendedFriendsByTypeList(
+            List<FriendRecommendType> typeList, int size, User user){
+        return friendRecommender.recommendFriendsByTypeList(typeList, size, user);
     }
 
     public boolean getIsNewUser(Long userId) {
